; ModuleID = '/home/carl/AnghaBench/freebsd/stand/kshim/extr_bsd_kernel.c_usb_free.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/kshim/extr_bsd_kernel.c_usb_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.malloc_hdr = type { i32 }

@malloc_head = common dso_local global i32 0, align 4
@entry = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usb_free(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.malloc_hdr*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = icmp eq i8* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %15

7:                                                ; preds = %1
  %8 = load i8*, i8** %2, align 8
  %9 = bitcast i8* %8 to %struct.malloc_hdr*
  store %struct.malloc_hdr* %9, %struct.malloc_hdr** %3, align 8
  %10 = load %struct.malloc_hdr*, %struct.malloc_hdr** %3, align 8
  %11 = getelementptr inbounds %struct.malloc_hdr, %struct.malloc_hdr* %10, i32 -1
  store %struct.malloc_hdr* %11, %struct.malloc_hdr** %3, align 8
  %12 = load %struct.malloc_hdr*, %struct.malloc_hdr** %3, align 8
  %13 = load i32, i32* @entry, align 4
  %14 = call i32 @TAILQ_INSERT_TAIL(i32* @malloc_head, %struct.malloc_hdr* %12, i32 %13)
  br label %15

15:                                               ; preds = %7, %6
  ret void
}

declare dso_local i32 @TAILQ_INSERT_TAIL(i32*, %struct.malloc_hdr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
